@@ -1,3 +1,7 @@
+2013-01-10  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-ecl.lisp (frame-var-value): Return the value without name.
+
 2013-01-09  Helmut Eller  <heller@common-lisp.net>
 
 	* swank.lisp (frame-locals-for-emacs): Print variable names in
